[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Bird Enemy3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Bird Enemy2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bird Enemy1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bird Enemy4.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=5]
[ext_resource path="res://Sound Effects/enemy hit.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sound Effects/enemy die.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 14 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dead"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="EnemyDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
